Fixed message typing space covered bug

--- a/public/css/userMessage.css
+++ b/public/css/userMessage.css
@@ -354,3 +354,7 @@ html, body, .min-h-screen, .h-screen, .flex-1 {
   max-height: 100% !important;
   scroll-behavior: smooth;
 } 
+
+.msgInoutButtom {
+  z-index: 110;
+}
